Updated to latest libraries. Added push capabilities for android version.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="button_login">ECID</string>
     <string name="state_message">State</string>
     <string name="action_message">Action</string>
-
+    <string name="msg_token_fmt">InstanceID Token: %s</string>
+    <string name="msg_ecid_fmt">ECID: %s</string>
+    <string name="fcm_token">FCM Token: %s</string>
 </resources>
